feat(docker-compose): added ACCESS_TOKEN_EXPIRY_MINUTES and REFRESH_TOKEN_EXPIRY_DAYS env variables

--- a/compose.yaml
+++ b/compose.yaml
@@ -13,3 +13,5 @@
       JWT_SECRET: ${JWT_SECRET}
       JWT_ISSUER: ${JWT_ISSUER}
       JWT_AUDIENCE: ${JWT_AUDIENCE}
+      ACCESS_TOKEN_EXPIRY_MINUTES: ${ACCESS_TOKEN_EXPIRY_MINUTES}
+      REFRESH_TOKEN_EXPIRY_DAYS: ${REFRESH_TOKEN_EXPIRY_DAYS}
