--- a/.github/workflows/quiz.yml
+++ b/.github/workflows/quiz.yml
@@ -12,15 +12,48 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        
+      - name: Set Docker Image Tag
+        run: echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/quiz-net .
-          docker tag ${{ secrets.DOCKER_USERNAME }}/quiz-net:latest ${{ secrets.DOCKER_USERNAME }}/quiz-net:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/quiz-net:latest      
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/quiz-net:$IMAGE_TAG .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/quiz-net:$IMAGE_TAG ${{ secrets.DOCKER_USERNAME }}/quiz-net:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/quiz-net:$IMAGE_TAG
+          docker push ${{ secrets.DOCKER_USERNAME }}/quiz-net:latest
+          
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        
+      - name: Copy docker compose file to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "compose.yaml"
+          target: "/app"
+      
+      - name: Connect to server and deploy using docker compose file
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /app
+            docker compose pull
+            docker compose up -d --force-recreate
+            docker system prune -f
