--- a/src/Quiz.MinIo/Quiz.MinIo.csproj
+++ b/src/Quiz.MinIo/Quiz.MinIo.csproj
@@ -8,7 +8,21 @@
 
     <ItemGroup>
       <Folder Include="Extensions\" />
-      <Folder Include="Repositories\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Minio" Version="6.0.4" />
+      <PackageReference Include="Minio.AspNetCore" Version="6.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Quiz.Core\Quiz.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features">
+        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.1\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
